--- a/linked-list.tex
+++ b/linked-list.tex
@@ -28,7 +28,7 @@ For simplicity, a process creates a new operation structure each time it writes 
 
 
 \begin{procedure}[b]
-	\caption{$<$ Node, Node$>$ Lookup (T key)}
+	\caption{$<$ Node, Node$>$ Lookup $ $ (T key)}
 	
 	\textbf{Data: } Node *pred, *curr, *succ
 	
@@ -60,13 +60,14 @@ For simplicity, a process creates a new operation structure each time it writes 
 	
 	Type Info \{ \nllabel{StructDefStart} \\
 		\hspace*{6mm} \{Insert, Delete\} optype \\
-		\hspace*{6mm} Node *pred, *curr, *new \\
+		\hspace*{6mm} Node *nd \\
+		\hspace*{6mm} boolean result \\
 	\} \\
 	
 	Code for process p:
 	
 	\begin{procedure}[H]
-		\caption{boolean Insert (T key)}
+		\caption{boolean Insert $ $ (T key)}
 		
 		$ \begin{array}{rl}
 			\mbox{\textbf{Data: }}	&	\mbox{Node *pred, *curr} \\
@@ -78,16 +79,17 @@ For simplicity, a process creates a new operation structure each time it writes 
 %							\> Node new := \textbf{new} Node (key)
 %		\end{tabbing}
 %		\vspace*{-5mm}
-		
+		\textcolor{blue} {Backup[p] := new Info (Insert, new, null)} \;
 		\While{\True}{ \label{recover-insert}
 			$\langle$pred, curr$\rangle$ := lookup(key)\;
 			\uIf{curr.key = key}{
+				\textcolor{blue} {Backup[p].result := \False} \;
 				\KwRet \False \tcp* {key is already in the list}
 			} \uElse {
 				node.next := unmarked curr\;
-				\textcolor{blue} {Backup[p] := new Info (Insert, pred, curr, new)}\;
 				\uIf{pred.next.\CAS (unmarked curr, unmarked new)}{
 				%	Backup[p].type = InsertDone\;
+					\textcolor{blue} {Backup[p].result := \True} \;
 					\KwRet \True \tcp*{new node has been inserted}
 				}
 			}		
@@ -97,20 +99,23 @@ For simplicity, a process creates a new operation structure each time it writes 
 	
 	
 	\begin{procedure}[H]
-		\caption{boolean Delete (T key)}
+		\caption{boolean Delete $ $ (T key)}
 		
 		\textbf{Data: } Node *pred, *curr, *succ
 		
+		\textcolor{blue} {Backup[p] := new Info (Delete, null, null)} \;
 		\While{\True}{ \label{recover-delete}
 			$\langle$pred, curr$\rangle$ := lookup(key)\;
-			\uIf{curr.key $\neq$ key} {
+			\uIf{curr.key $\neq$ key \label{insert-key-in-list}} {
+				\textcolor{blue} {Backup[p].result := \False} \;
 				\KwRet \False \tcp*{key is not in the list}
 			} \uElse {
 				succ := curr.next\;
-				\textcolor{blue}{Backup[p] := new Info (Delete, pred, curr, null)}\;
+				\textcolor{blue}{Backup[p].nd := curr}\;
 				\uIf(\tcp*[f]{logical delete}) {curr.next.\CAS (unmarked succ, marked succ)} { 
 					\textcolor{blue}{curr.deleter.\CAS (null, p)} \tcp*{announce yourself as deleter} \label{recoverable-logical-delete}
 					pred.next.\CAS (unmarked curr, unmarked succ) \tcp*{physical delete}
+					\textcolor{blue}{Backup[p].result := (curr.deleter = p)} \;
 					\textcolor{blue}{\KwRet (curr.deleter = p)} \tcp*{originally return true}
 				}
 			}	
@@ -119,7 +124,7 @@ For simplicity, a process creates a new operation structure each time it writes 
 	\end{procedure}
 
 	\begin{procedure}[H]
-		\caption{boolean Find (T key)}
+		\caption{boolean Find $ $ (T key)}
 		
 		\KwData{Node* curr = head}	
 		
@@ -138,10 +143,11 @@ For simplicity, a process creates a new operation structure each time it writes 
 
 
 \begin{procedure}[H]
-	\caption{Recover ()}
+	\caption{Recover $ $ (void)}
 	
+	\uIf {Backup[p].result $\neq$ null} {\KwRet Backup[p].result}
 	\uIf{Backup[p].optype = Insert}{
-		\uIf{Backup[p].new is in the list $||$ Backup[p].curr.next is marked}{
+		\uIf{Backup[p].nd is in the list $||$ Backup[p].nd.next is marked}{
 			\KwRet \True\;
 		} \uElse {
 			\KwRet FAIL
@@ -149,8 +155,8 @@ For simplicity, a process creates a new operation structure each time it writes 
 		}	
 	}
 	\uIf{Backup[p].optype = Delete}{
-		\uIf{Backup[p].curr.next is marked}{
-			\textbf{go to} \ref{recoverable-logical-delete} \tcp*{try to complete the deletation}
+		\uIf{Backup[p].nd $\neq$ null \&\& Backup[p].nd.next is marked}{
+			\textbf{go to} \ref{recoverable-logical-delete} with curr := nd\tcp*{try to complete the deletation}
 		} \uElse {
 			\KwRet FAIL
 			%\textbf{go to} \ref{recover-delete} \tcp*{restart Delete}
@@ -164,11 +170,13 @@ For simplicity, a process creates a new operation structure each time it writes 
 \subsubsection*{Correctness Argument}
 In the following, we give an high-level proof for the correctness of the algorithm.
 
-First, notice that quitting the Lookup procedure at any point, or repeating it, can not violet the list consistency. The Lookup procedure simply traverse the list, while trying to physically delete marked nodes. Moreover, in order to mark a node curr as logically deleted, a process needs to mark the field next in its predecessor in the list, pred, which points to curr. Thus, once pred.next is marked, only the first process to perform a CAS which tries and physically delete curr will succeed. This follows from the fact that the first CAS will swing pred.next to point to a different node then curr, and thus succeed. Any future change to pred.next, if it is done by an insert operation, then a new located node is used, or by a later delete operation.
+First, notice that quitting the Lookup procedure at any point, or repeating it, can not violet the list consistency. The Lookup procedure simply traverse the list, while trying to physically delete marked nodes.
+Once curr.next is marked, the first process to perform a CAS which tries and physically delete curr will succeed. Starting from this posit, no node in the list can point to curr, including pred itself, thus any other CAS which has a reference to curr will fail. Hence, repeating the attempt to physically delete a node does not affect the list.
 
-which marks pred.next after the physical delete of curr, and thus no node in the list points to curr, and in particular it is not te successor of any node.
+Assume a process $p$ performs an $Insert(key)$ operation. If $p$ observes a value $key$ in line \ref{insert-key-in-list}, then it returns
 
-once a node curr is marked only the first process to perform a CAS which tries and physically delete curr will succeed.
+
+
 
 
 This follows from the fact that no node can point to curr from the moment of the marking, except for pred, its predecessor at this point. Insert operation uses only new nodes, while any CAS which tries to change reference part of any next fields uses an 
