--- a/linked-list.tex
+++ b/linked-list.tex
@@ -1,7 +1,9 @@
 \section{Linked-List}
 
-Harris Linked-List uses an Atomic-Markable-Reference object, in which the next field of a Node, in addition to a reference to the next node in the list, is also marked or unmarked. The two fields can be update atomically, either together or individually. This can be done by using the most-significant-bit of next for the marking. For simplicity, we assume node.next returns the reference, while a query can be used to identify if it is marked. Therefore, whenever writing to node.next, or performing CAS, both the reference and marking state should be mention.
+Harris Linked-List uses an Atomic-Markable-Reference object, in which the next field of a Node, in addition to a reference to the next node in the list, is also marked or unmarked. The two fields can be update atomically, either together or individually. This can be done by using the most-significant-bit of next for the marking. For simplicity, we assume reading next returns the reference only, while get\_data() function is used to get (atomically) both the reference and mark bit. Moreover, whenever performing CAS on node.next, both reference and mark state should be mention.
 For ease of presentation, we assume a List is initialized with head and tail, containing keys $-\infty, \infty$ respectively. We allow no insert or delete of these keys.
+
+%(a read assigned to either a single or two variables)
 
 The Lookup procedure is used by Insert and Delete in order to find the node with the lowest key greater or equal to the input key, and its predecessor on the list, while physically removing any marked node on its way. To insert a key $\alpha$, a process first finds the right location for $\alpha$ using the Lookup procedure, and then tries to set pred.next to point to a new node containing $\alpha$ by performing CAS. To delete a key $\alpha$, a process looks for it using the Lookup procedure, and then tries to logically remove it by marking curr.next using CAS. In case the marking was successful, the process also tries to physically remove the node. To find a key $\alpha$, a process simply looks for a node in the list with key $\alpha$ which is unmarked.
 
@@ -28,16 +30,23 @@ For simplicity, a process creates a new operation structure each time it writes 
 
 
 \begin{procedure}[b]
+	\footnotesize
+	
 	\caption{$<$ Node, Node$>$ Lookup $ $ (T key)}
 	
-	\textbf{Data: } Node *pred, *curr, *succ
+	$ \begin{array}{rl}
+	\mbox{\textbf{Data: }}	&	\mbox{Node *pred, *curr, *succ} \\
+							&	\mbox{boolean mbit}
+	\end{array} $
+	
+%	\textbf{Data: } Node *pred, *curr, *succ
 	
 	retry: \While{\True}{ \label{find-outer-loop}
 		pred := head\;
 		curr := head.next\;	
 		\While{\True}{
-			succ := curr.next\;
-			\uIf(\tcp*[f]{is succ was logically deleted?}) {curr.next is marked} {
+			$\langle$succ, mbit$\rangle$ := curr.next.get\_data() \;
+			\uIf(\tcp*[f]{is succ was logically deleted?}) {mbit} {
 				\uIf{pred.next.\CAS(unmarked curr,unmarked succ) = \False}{
 					\textbf{go to} retry \tcp*{help failed}
 				}
@@ -55,6 +64,9 @@ For simplicity, a process creates a new operation structure each time it writes 
 \end{procedure}
 
 \begin{figure}[h]
+	\vspace{-10mm}
+	
+	\footnotesize
 	
 	\textbf{Shared variables:} Node *head \\
 	
@@ -87,7 +99,7 @@ For simplicity, a process creates a new operation structure each time it writes 
 				\KwRet \False \tcp* {key is already in the list}
 			} \uElse {
 				node.next := unmarked curr\;
-				\uIf{pred.next.\CAS (unmarked curr, unmarked new)}{
+				\uIf{pred.next.\CAS (unmarked curr, unmarked new) \label{insert-CAS}}{
 				%	Backup[p].type = InsertDone\;
 					\textcolor{blue} {Backup[p].result := \True} \;
 					\KwRet \True \tcp*{new node has been inserted}
@@ -109,9 +121,26 @@ For simplicity, a process creates a new operation structure each time it writes 
 			\uIf{curr.key $\neq$ key \label{insert-key-in-list}} {
 				\textcolor{blue} {Backup[p].result := \False} \;
 				\KwRet \False \tcp*{key is not in the list}
-			} \uElse {
-				succ := curr.next\;
+			} 
+			\uElse {
 				\textcolor{blue}{Backup[p].nd := curr}\;
+				\While (\tcp*[f]{repeatedly attempt logical delete}) {curr.next is unmarked}{
+					succ := curr.next \;
+					curr.next.\CAS (unmarked succ, marked succ) \;
+				}
+				pred.next.\CAS (unmarked curr, unmarked succ) \tcp*{physical delete}
+				\textcolor{blue}{curr.deleter.\CAS (null, p)} \tcp*{announce yourself as deleter} \label{recoverable-logical-delete}
+				\textcolor{blue}{Backup[p].result := (curr.deleter = p)} \;
+				\textcolor{blue}{\KwRet (curr.deleter = p)}
+				}
+			}	
+		
+		
+		
+	\remove{
+		\uElse {
+				\textcolor{blue}{Backup[p].nd := curr}\;
+				succ := curr.next\;
 				\uIf(\tcp*[f]{logical delete}) {curr.next.\CAS (unmarked succ, marked succ)} { 
 					\textcolor{blue}{curr.deleter.\CAS (null, p)} \tcp*{announce yourself as deleter} \label{recoverable-logical-delete}
 					pred.next.\CAS (unmarked curr, unmarked succ) \tcp*{physical delete}
@@ -126,12 +155,13 @@ For simplicity, a process creates a new operation structure each time it writes 
 	\begin{procedure}[H]
 		\caption{boolean Find $ $ (T key)}
 		
-		\KwData{Node* curr = head}	
+		\textbf{Data: } Node *curr := head
+		%\KwData{Node* curr = head}	
 		
 		\While{curr.key $<$ key}{
 			curr = curr.next\;	
 		}
-		\KwRet (curr.key == key $\&\&$ curr.next is unmarked)\;
+		\KwRet (curr.key = key $\&\&$ curr.next is unmarked)\;
 		
 	\end{procedure}
 
@@ -143,6 +173,8 @@ For simplicity, a process creates a new operation structure each time it writes 
 
 
 \begin{procedure}[H]
+	\footnotesize
+	
 	\caption{Recover $ $ (void)}
 	
 	\uIf {Backup[p].result $\neq$ null} {\KwRet Backup[p].result}
@@ -171,18 +203,15 @@ For simplicity, a process creates a new operation structure each time it writes 
 In the following, we give an high-level proof for the correctness of the algorithm.
 
 First, notice that quitting the Lookup procedure at any point, or repeating it, can not violet the list consistency. The Lookup procedure simply traverse the list, while trying to physically delete marked nodes.
-Once curr.next is marked, the first process to perform a CAS which tries and physically delete curr will succeed. Starting from this posit, no node in the list can point to curr, including pred itself, thus any other CAS which has a reference to curr will fail. Hence, repeating the attempt to physically delete a node does not affect the list.
+Once curr.next is marked, a single process can perform the physical delete. This follows from the fact that at any point there is a single node in the list which points to curr. Once curr is physically delete, no node in the list points to curr, and thus any CAS operation with curr as the first parameter will fail. This observation relays on the fact that any new allocated node has a different address then curr.
+As a result, repeating the attempt to physically delete a node does not affect the list.
 
-Assume a process $p$ performs an $Insert(key)$ operation. If $p$ observes a value $key$ in line \ref{insert-key-in-list}, then it returns
+A key argument in the proof is that if an insert operation is yet to perform a successful CAS (in line \ref{insert-CAS}), then considering the operation as not having a linearization point does not violate the list consistency. This follows from the fact the operation did not affected any process. In particular, repeating the operation in such case is also safe. As a result, if a process performing insert is about to return false, due to the fact key is already in the tree, and crash, then considering the operation as FAIL upon recovery does not violate consistency.
+A similar argument holds for delete operation and CAS for logic delete.
 
+fails because key is already in the list, then aborting it (i.e., considering it as not having a linearization point) does not violate the consistency of list. This follows from the fact that such an operation does not affect any other process. Moreover, even repeating the operation in such case (assuming it did not return yet) can not violate consistency, from the same reason. A similar argument holds for delete operation which fails because key is not in the list.
 
-
-
-
-This follows from the fact that no node can point to curr from the moment of the marking, except for pred, its predecessor at this point. Insert operation uses only new nodes, while any CAS which tries to change reference part of any next fields uses an 
-and pred is pointing to curr. Then, only the first process to perform a CAS which tries and physically delete curr will succeed. This follows from the fact that once curr is marked, it will never be unmarked, and we always use new node when performing an insert operation. Therefore, once curr is physically deleted once, pred will never point to it again, and thus any subsequent CAS on pred.next with curr as first argument will return false.
-
-Assume a process $p$ performs 
+Assume a process $p$ performs $insert(key)$ operation. Then, $p$ creates a new node ndnew with 
 
 For the Insert operation, $p$ tries to add the new node by performing a CAS. If it succeeds it will return true if it suffers no failure. In case of a failure after writing to Backup[p], upon recovery $p$ tries to complete its operation. If it already performed a successful CAS, that is, the node was added to the list, then either it is still in the list or that it was deleted. Therefore, if $p$ can find the new node in the list (using a procedure similar to find), or that it is marked, it must be that the node was added, and $p$ can return true. Otherwise, $p$ either crashed before performing the CAS, or that the CAS was unsuccessful. In both cases, the new node was not added, and $p$ can restart the Insert procedure.
 
