--- a/recoverable-data-structures.tex
+++ b/recoverable-data-structures.tex
@@ -11,6 +11,7 @@
 \usepackage{paralist}
 \usepackage{fullpage}
 \usepackage{xcolor}
+%\usepackage{subcaption}
 \usepackage{smartref} % for referencing the line numbers
 
 % theorem styles
@@ -61,9 +62,9 @@
 
 \begin{document}
 
-	\input{linked-list}
+%	\input{linked-list}
 %	\input{elimination-stack}
-%	\input{BST-robust}
+	\input{BST-robust}
 	
 
 \end{document}
