--- a/BST-robust.tex
+++ b/BST-robust.tex
@@ -117,31 +117,47 @@
 
 \section{Robust BST}
 
-The original BST algorithm does not support the crash-recovery model. It is clear from the code a process does not persist the operation's response in the non-volatile memory, and thus, once a process crash the response is lost. For example, assume a process $q$ apply $\func{Insert} (k)$, performs a successful \CASB\ in line \lref{iflag-cas} and fails after completing the \func{HelpInsert} routine. In this case, the \func{Insert} operation took effect, that is, the new key appears as a leaf in the tree, and any $\func{Find} (k)$ operation will return it. However, even though the operation was already linearized at the time of the crash, upon recovery process $q$ is unaware of it. Moreover, looking for the new leaf in the tree is not healpfull, since it might be $k$ has been removed from the tree after the crash.
+The original BST algorithm does not support the crash-recovery model. It is clear from the code a process does not persist the operation's response in the non-volatile memory, and thus, once a process crash the response is lost. For example, assume a process $q$ apply $\func{Insert} (k)$, performs a successful \CASB\ in line \lref{iflag-cas} and fails after completing the \func{HelpInsert} routine. In this case, the \func{Insert} operation took effect, that is, the new key appears as a leaf in the tree, and any $\func{Find} (k)$ operation will return it. However, even though the operation must be linearized before the crash, upon recovery process $q$ is unaware of it. Moreover, looking for the new leaf in the tree may be futile, as it might be $k$ has been removed from the tree after the crash.
 
-Furthermore, if no recover routine is supplied, it may result an execution which is not well-formed. Consider for example the following scenario. A process $q$ invoke an $Op_1 = \func{Insert}(k_1)$ operation. $q$ performs a successful \CASB\ in line \lref{iflag-cas} followed by a crush. After recovering, $q$ invoke an $Op_2 = \func{Insert}(k_2)$ operation. Assume $k_1$ and $k_2$ belongs to a different parts of the tree (do not share parent or grandparent). Then, $q$ can complete inserting $k_2$ without having any affect on $k_1$. Now, a process $q'$ performs $\func{Find}(k_1)$ which returns \NULL, as the insertion of $k_1$ is not completed, followed by $\func{Find}(k_2)$, which returns the leaf of $k_2$. The $\func{Insert}(k_1)$ operation will be completed later by any \func{Insert} or \func{Delete} operation which needs to make changes to the flagged node. We get that $Op_2$ must be before $Op_1$ in the linearization, although $Op_1$ invoked first.
+Furthermore, if no recover routine is supplied, it may result an execution which is not well-formed. Consider for example the following scenario. A process $q$ invoke an $Op_1 = \func{Insert}(k_1)$ operation. $q$ performs a successful \CASB\ in line \lref{iflag-cas} followed by a crush. After recovering, $q$ invoke an $Op_2 = \func{Insert}(k_2)$ operation. Assume $k_1$ and $k_2$ belongs to a different parts of the tree (do not share parent or grandparent). Then, $q$ can complete the insertion of $k_2$ without having any affect on $k_1$. Now, a process $q'$ performs $\func{Find}(k_1)$ which returns \NULL, as the insertion of $k_1$ is not completed, followed by $\func{Find}(k_2)$, which returns the leaf of $k_2$. The $\func{Insert}(k_1)$ operation will be completed later by any \func{Insert} or \func{Delete} operation which needs to make changes to the flagged node. We get that $Op_2$ must be before $Op_1$ in the linearization, although $Op_1$ invoked first.
 
 The kind of anomaly described above can be addressed by having the first \CASB\ of a successful attempt for \func{Insert} or \func{Delete} as the linearization point, as in the Linked-List. For that, the \func{Find} routine should take into consideration future unavoidable changes, for example, a node flagged with \insertflag\ ensures an insertion of some key. A simple solution is to change the \func{Find} routine such that it also helps other operations, as described in figure \ref{robust find - solution 1}. The \func{Find} routine will search for key $k$ in the tree. If the \func{Search} routine returns a grandparent or a parent that is flagged, then it might be that an insert or delete of $k$ is currently in progress, thus we first help the operation to complete, and then search for $k$ again. Otherwise, if $gpupdate$ or $pupdate$ has been changed since the last read, it means some change already took affect, and there is a need to search for $k$ again. If none of the above holds, there is a point in time where $gp$ points to $p$ which points to $l$, and there is no attempt to change this part of the tree. As a result, if $k$ is in the tree at this point, it must be in $l$, and the find can return safely. 
 
 The approach described above is not efficient in terms of time. We would like a solution which maintain the desirable behaviour of the original \func{Find} routine, where a single \func{Search} is needed. A more refined solution is given in figure \ref{robust find - solution 2}. The intuition for it is drown from the Linked-List algorithm.
-In the Linked-List algorithm it was enough to consider a marked node as if it has been already deleted, without the need to complete the deletion. Nonetheless, the complex BST implementation is more challenging, as the \func{Delete} routine needs to successfully capture two nodes using \CASB\ in order to complete the deletion. Therefore, if a process $p$ executes $\func{Find}(k)$ procedure, and observes a node flagged with $\deleteflag$ attempting to delete the key $k$, it can not know whether in the future this delete attempt will succeed or fail, and thus does not know whether to consider the key $k$ as part of the tree or not. To overcome this problem, in such case the process will first try and validate the delete operation by marking the relevant node. According to whether the marking attempt was successful, the process can conclude if the delete operation is successful or not.
+In the Linked-List algorithm it was enough to consider a marked node as if it has been deleted, without the need to complete the deletion. Nonetheless, the complex BST implementation is more challenging, as the \func{Delete} routine needs to successfully capture two nodes using \CASB\ in order to complete the deletion. Therefore, if a process $p$ executes $\func{Find}(k)$ procedure, and observes a node flagged with $\deleteflag$ attempting to delete the key $k$, it can not know whether in the future this delete attempt will succeed or fail, and thus does not know whether to consider the key $k$ as part of the tree or not. To overcome this problem, in such case the process will first try and validate the delete operation by marking the relevant node. According to whether the marking attempt was successful, the process can conclude if the delete operation is successful or not.
 In order to easily implement the modified \func{Find} routine there is a need to conclude from \IFlag\ what is the new leaf (leaf $new$ in the \func{Insert} routine). For simplicity of presentation, we do not add this field, and abstractly refer to it in the code.
 
-The correctness of the two solutions relies on the following argument.
-Once a process flags a node during operation $Op$ with input key $k$ (either \func{Insert} or \func{Delete}), then if this attempt to complete the operation eventually succeed (i.e., the marking is also successful in the case of \func{Delete}), then any \func{Find}(k) operation invokes from this point consider $Op$ as if it is completed.
+The correctness of the two suggested solutions relies on the following argument.
+Once a process flags a node during operation $Op$ with input key $k$ (either \func{Insert} or \func{Delete}), then if this attempt to complete the operation eventually succeed (i.e., the marking is also successful in the case of \func{Delete}), then any \func{Find}(k) operation invoked from this point consider $Op$ as if it is completed.
 
-The suggested modification, although being simple and local, only guarantee the implementation satisfy R-linearzability. However, the problem of response being lost in case of a crash is not addressed. In general, the critical points in the code for recovery are the \CASB\ primitives, as a crash right after applying \CASB\ operation results the lost of the response, and in order to complete the operation the process needs to know the result of the \CASB. In addition, because of the helping mechanism, a suspended \func{Delete} operation which flagged a node and yet to mark one, may be completed by other process in the future, and may not. Upon recovery, the process needs to distinguish between the two cases, in order to obtain the right response.
+The suggested modification, although being simple and local, only guarantee the implementation satisfy R-linearzability. However, the problem of response being lost in case of a crash is not addressed. Roughly speaking, the critical points in the code for recovery are the \CASB\ primitives, as a crash right after applying \CASB\ operation results the lost of the response, and in order to complete the operation the process needs to know the result of the \CASB. In addition, because of the helping mechanism, a suspended \func{Delete} operation which flagged a node and yet to mark one, may be completed by other process in the future, and may not. Upon recovery, the process needs to distinguish between the two cases, in order to obtain the right response.
 
 To address this issue, we expend the helping mechanism, so that the helping process needs also to update the info structure in case of a success. This is done by adding a boolean field to the Flag structure. This way, if a process crash along an operation $Op$, upon recovery it can check whether the operation was completed by some different process. 
 
-Before a process attempt to perform an operation, as it creates the \Flag\ structure $op$ describing the operation and its affect on the data structure, the process stores $op$ in a designated location (according to its id). Upon recovery, the process reads this location, and if the operation is not completed yet, it retries to perform it, starting from the point of the first flagging (the first \CASB). Otherwise, the operation was completed, and the response value is already known. Notice that there is a scenario in which process $q$ recovers and observes an operation $Op$ as not being complete, but just before it retries it, some other process complete the operation. We need to prove that even in such case, the operation will affect the data structure exactly once.
+Before a process attempt to perform an operation, as it creates the \Flag\ structure $op$ describing the operation and its affect on the data structure, the process stores $op$ in a designated location (for simplicity, we use an array). Upon recovery, the process reads this location, and if the operation is not completed yet, it retries to perform it, starting from the point of the first flagging (the first \CASB). Otherwise, the operation was completed, and the response value is already known. Notice that there is a scenario in which process $q$ recovers and observes an operation $Op$ as not being completed, but just before it retries it, some other process complete the operation. We need to prove that even in such case, the operation will affect the data structure exactly once, and the right response is returned.
 
-The supplied implementation does not specify what happens if a process crush outside of the BST code. Invoking the \func{Recover} routine upon recovery is not helpful, as there is no pending operation. Moreover, the question remains how does a process can know where in the code the crush took place. If the crush was during 
+Notice that the given implementation does not recover the \func{Find} routine, since this routine does not make any changes to the BST, hence it is always safe to consider it as having no linearization point and reissue it. Also, for ease of presentation, we only write to Announce[id] once we are about to capture a node using a CAS. However, writing to Announce[id] at the beginning of the routine may be helpful in case of a crash early in the routine, so that the process will be able to use the data stored in Announce[id] in such case also. The same is true with response value - Announce[id].done is updated only if the routine made changes to the BST.
+
+\subsubsection{Correctness}
+In this subsection we give a proof sketch for the algorithm correctness. The proof relies on the correctness of the original algorithm, which can be found on [....]. Moreover, the original algorithm is anonymous and uniform, i.e., any number of processes can use the BST, and there is no need for a process to know the number of processes in the system in order to use the BST. Thus, if we consider an execution and prove it is indistinguishable to a process $p$ from some execution of the original algorithm in which more processes can participate, then it has to return the same response on both.
+
+It is easy to verify the post-conditions of the \func{Search} routine still holds, as they follow directly from the code. Also, since no changes are made to the \func{Search} routine, it does not make changes to the BST, but simply traverse it. Therefore \func{Find} routine, which only uses \func{Search}, does not affect any process, and in case of a failure along \func{Find} execution, reissuing it satisfies NRL. A key argument in the proof is that a node in the tree never point twice to the same node. This attributes to the fact an \func{Insert} presents a node with two fresh children. Therefore, if we assume node $nd_1$ points to $nd_2$, in order to point to a different node we must either delete $nd_2$, or insert a new node between the two. In the last case, a copy of $nd_2$ is created, and thus $nd_2$ will no longer bu used.
+
+Consider a process $q$ performs an \func{Insert}(k) operation. As argued before, a crash before writing to Announce[q] implies no changes has been made to the BST. Assume thus $q$ executes line \lref{insert-write-announce}, i.e., $q$ stored in Announce[q] a pointer to an \IFlag\ record containing all the data needed for the current attempt to complete the \func{Insert} routine. Since $q$ is in the middle of a while loop, it is enough to prove that if $q$ crash before the next time it writes to Announce[q], if there is such write, upon recovery it will either complete its operation with the right response, or will continue to the next write to Announce[q] without having any affect on the BST. Hence, the same argument can be applied once $q$ writes to Announce[q] again.
+
+Assume $q$ performs a successful CAS in line \lref{iflag-cas}. Then, the \IFlag\ op is stored in $p\leftarrow update$, and it is also iflaged. Notice that p was not changed since the \func{Search} routine read it. This follows from the fact that any change to a node must store a pointer to a new created record, different then any other record. Thus, a successful \CASB\ implies no changes have been applied. Starting from this point, no changes can be made to $p$, except for the change point to by op, as the node is flagged. Relying on the correctness of the original algorithm, no matter how many times \func{HelpInsert}(op) will be executed, the change will occur only once. This follows from the fact that many process can observe op, and will try to complete it in the future. The core for this argument is that a node never point twice to the same node.
+
+
+
+
+
+
+
 
 %\setcounter{linenum}{0}
 
 
-\begin{figure*}
+\begin{figure*}[h]
 	\footnotesize
 	
 	\begin{code}
@@ -170,7 +186,7 @@ The supplied implementation does not specify what happens if a process crush out
 
 
 
-\begin{figure*}
+\begin{figure*}[h]
 	\footnotesize
 	
 	\begin{code}
@@ -256,12 +272,12 @@ The supplied implementation does not specify what happens if a process crush out
 	\begin{code}
 		\func{Recover}() \{ \nlc \n
 			Flag $*op$ = Announce[id] \bl \nlc
+			
+			if $op \leftarrow done = \TRUE$ then return \TRUE \nlc
 			if $op$ of type \IFlag\ then \nlc \n
-				if $op \leftarrow done = \TRUE$ then return \TRUE \nlc
-				else go to line \ref{iflag-cas} \nlc \p
+				go to line \lref{iflag-cas} \nlc \p
 			if $op$ of type \DFlag\ then \nlc \n
-				if $op \leftarrow done = \TRUE$ then return \TRUE \nlc
-				else go to line \ref{dflag-cas} \nlc \p
+				go to line \lref{dflag-cas} \nlc \p
 		\p \}
 	\end{code}
 
@@ -333,7 +349,7 @@ The supplied implementation does not specify what happens if a process crush out
 		child fields equal to $new$ and $newSibling$\ul 
 		(the one with the smaller key is the left child)\nlc
 		\p        $op :=$ pointer to a new \IFlag\ \record\  containing $\langle p, l, newInternal, \textcolor{blue}{\FALSE}\rangle$\label{new-IFlag}\nlc
-		\textcolor{blue}{$Announce[id] := op$} \nlc
+		\textcolor{blue}{$Announce[id] := op$} \label{insert-write-announce} \nlc
 		$result := \CASB(p\rightarrow update, pupdate, \langle \insertflag, op\rangle)$ \tabtabcom {\bf iflag \CASB}\label{iflag-cas} \nlc
 		if $result = pupdate$ \textcolor{blue}{or $result = \langle \insertflag,op \rangle$} then \{ \tabtabcom The iflag \CASB\ was successful\nlc
 		\n            \func{HelpInsert}$(op)$ \tabtabcom Finish the insertion\label{finish-insert}\nlc
