--- a/linked-list.tex
+++ b/linked-list.tex
@@ -5,28 +5,28 @@ For ease of presentation, we assume a List is initialized with head and tail, co
 
 %(a read assigned to either a single or two variables)
 
-The Lookup procedure is used by Insert and Delete in order to find the node with the lowest key greater or equal to the input key, and its predecessor on the list, while physically removing any marked node on its way. To insert a key $\alpha$, a process first finds the right location for $\alpha$ using the Lookup procedure, and then tries to set pred.next to point to a new node containing $\alpha$ by performing CAS. To delete a key $\alpha$, a process looks for it using the Lookup procedure, and then tries to logically remove it by marking curr.next using CAS. In case the marking was successful, the process also tries to physically remove the node. To find a key $\alpha$, a process simply looks for a node in the list with key $\alpha$ which is unmarked.
+A brief description of the original implementation and its linearization is as follows. The Lookup procedure is used by Insert and Delete in order to find the node with the lowest key greater or equal to the input key, and its predecessor on the list, while physically removing any marked node on its way. To insert a key $\alpha$, a process first finds the right location for $\alpha$ using the Lookup procedure, and then tries to set pred.next to point to a new node containing $\alpha$ by performing CAS. To delete a key $\alpha$, a process search for it using the Lookup procedure, and then tries to logically delete it by marking the next field using CAS. In case the marking was successful, the process also tries to physically remove the node. To find a key $\alpha$, a process simply looks for a node in the list with key $\alpha$ which is unmarked.
 
-The linearization point are as follows:
+The linearization point for the original implementation are as follows:
 \begin{itemize}
 	\item [Insert:] At the point of a successful CAS
 	\item [Delete:] At the point of a successful CAS for marking the node (logical delete)
 	\item [Find:] At the point where the procedure return, that is, at the read of either curr.key or curr.next.
 \end{itemize}
 
-Following the given linearization points (omitting proof...), insert and delete operation are linearized at the point where they affect the system. That is, if an insert operation performed a successful CAS, then all process will see the new node starting from this point, and if a node was logically removed, then all processes treat it as a removed node. Therefore, once a process $p$ recovers following a crash, the List data structure is consistent - if $p$ has a pending operation, either the operation already had a linearization point which affected all other processes, or it did not affect the data structure at all, nor will in any future run.
+Following the given linearization points (omitting proof...), insert and delete operation are linearized at the point where they affect the system. That is, if an insert operation performed a successful CAS, then all process will see the new node starting from this point, and if a node was logically delete, then all processes treat it as if it was removed. Therefore, once a process $p$ recovers following a crash, the list data structure is consistent - if $p$ has a pending operation, either the operation already had a linearization point which affected all other processes, or it did not affect the data structure at all, nor will in any future run.
 
-However, even though the List data structure is consistent, the response of the pending operation is lost. Consider for example a scenario in which process $p$ performs $Delete(\alpha)$ and crash right after applying a successful CAS to mark a node. Upon recovery, $p$ may be able to decide $\alpha$ was removed, as the node is marked. Nevertheless, even if no other process takes steps, $p$ is not able to determine whether it is the process to successfully delete $\alpha$, or that it was done by some other process, and therefore it does not able to determine the right response. Moreover, in case the node was physically removed, $p$ is not able to determine whether $\alpha$ has been deleted at all, as it is no longer part of the list.
+However, even though the list data structure is consistent, the response of the pending operation is lost. Consider for example a scenario in which process $p$ performs $Delete(\alpha)$ and crash right after applying a successful CAS to mark a node. Upon recovery, $p$ may be able to decide $\alpha$ was removed, as the node is marked. Nevertheless, even if no other process takes steps, $p$ is not able to determine whether it is the process to successfully delete $\alpha$, or that it was done by some other process, and therefore it does not able to determine the right response. Moreover, in case the node was physically removed, $p$ is not able to determine whether $\alpha$ has been deleted at all, as it is no longer part of the list.
 
 
 \subsubsection{Linked-List Recoverable Version}
 
-To solve the problems mention above, we present a modification for the algorithm such that in case a process fails, upon recovery it is able to complete its last pending operation and also return the response value. The algorithm presented in figure [......]. Blue lines represents changes comparing to the original algorithm (lines that has been added, except for one that was change. See the notes).
+To solve the problems mention above, we present a modification for the algorithm such that in case of a process crash, upon recovery it is able to complete its last pending operation if needed, and also return the response value in such case. The algorithm presented in figure \ref{linked-list}. Blue lines represents changes comparing to the original algorithm.
 
-Each node is equipped with a new field named deleter. This field is used to determine which process is the one to delete the node. After a process $p$ successfully mark a node (logical delete), it tries to write its id to deleter using CAS. This way, if a process fails during a delete, it can use deleter in order to determine the response value. We assume deleter is initialized to null when creating a new node.
+Each node is equipped with a new field named deleter. This field is used to determine which process is the one to delete the node. After the node was successfully marked (logical delete), process $p$ tries to announce itself as the one to delete the node by writing its id to deleter using CAS. This way, if a process crash during a delete, it can use deleter in order to determine the response value. We assume deleter is initialised to null when creating a new node.
 
 Each process $p$ has a designated location in the memory, Backup[p]. Before trying to apply an operation, $p$ writes to Backup[p] the entire data needed to complete the operation. Upon recovery, $p$ can read Backup[p], and based on it to complete its pending operation, in case there is such. Formally, Backup[p] contains a pointer to a structure containing all the relevant data.
-For simplicity, a process creates a new operation structure each time it writes to Backup, although, if used in an alternating manner, two such structures are enough.  
+For simplicity, process $p$ creates new such structure for each of its operations, although a more efficient way will be to use two such structures in an alternating way. 
 
 
 \begin{procedure}[b]
@@ -83,7 +83,7 @@ For simplicity, a process creates a new operation structure each time it writes 
 		
 		$ \begin{array}{rl}
 			\mbox{\textbf{Data: }}	&	\mbox{Node *pred, *curr} \\
-							&	\mbox{Node new := \textbf{new} Node (key)}
+									&	\mbox{Node newnd := \textbf{new} Node (key)}
 		\end{array} $
 		
 %		\begin{tabbing}
@@ -91,15 +91,15 @@ For simplicity, a process creates a new operation structure each time it writes 
 %							\> Node new := \textbf{new} Node (key)
 %		\end{tabbing}
 %		\vspace*{-5mm}
-		\textcolor{blue} {Backup[p] := new Info (Insert, new, null)} \;
+		\textcolor{blue} {Backup[p] := new Info (Insert, newnd, null)} \;
 		\While{\True}{ \label{recover-insert}
 			$\langle$pred, curr$\rangle$ := lookup(key)\;
 			\uIf{curr.key = key}{
 				\textcolor{blue} {Backup[p].result := \False} \;
 				\KwRet \False \tcp* {key is already in the list}
 			} \uElse {
-				node.next := unmarked curr\;
-				\uIf{pred.next.\CAS (unmarked curr, unmarked new) \label{insert-CAS}}{
+				newnd.next := unmarked curr\;
+				\uIf{pred.next.\CAS (unmarked curr, unmarked newnd) \label{insert-CAS}} {
 				%	Backup[p].type = InsertDone\;
 					\textcolor{blue} {Backup[p].result := \True} \;
 					\KwRet \True \tcp*{new node has been inserted}
@@ -116,24 +116,25 @@ For simplicity, a process creates a new operation structure each time it writes 
 		\textbf{Data: } Node *pred, *curr, *succ
 		
 		\textcolor{blue} {Backup[p] := new Info (Delete, null, null)} \;
-		\While{\True}{ \label{recover-delete}
+		%\While{\True}{ \label{recover-delete}
 			$\langle$pred, curr$\rangle$ := lookup(key)\;
 			\uIf{curr.key $\neq$ key \label{insert-key-in-list}} {
-				\textcolor{blue} {Backup[p].result := \False} \;
+				\textcolor{blue} {Backup[p].result := \False} \label{delete-write-false} \;
 				\KwRet \False \tcp*{key is not in the list}
 			} 
 			\uElse {
 				\textcolor{blue}{Backup[p].nd := curr}\;
-				\While (\tcp*[f]{repeatedly attempt logical delete}) {curr.next is unmarked}{
+				\While (\tcp*[f]{repeatedly attempt logical delete}) {curr.next is unmarked \label{delete-while-loop}}{
 					succ := curr.next \;
 					curr.next.\CAS (unmarked succ, marked succ) \;
 				}
-				pred.next.\CAS (unmarked curr, unmarked succ) \tcp*{physical delete}
-				\textcolor{blue}{curr.deleter.\CAS (null, p)} \tcp*{announce yourself as deleter} \label{recoverable-logical-delete}
-				\textcolor{blue}{Backup[p].result := (curr.deleter = p)} \;
+				succ := curr.next \label{delete-read-succ-after-CAS}\;
+				pred.next.\CAS (unmarked curr, unmarked succ) \label{delete-physical-delete} \tcp*{physical delete}
+				\textcolor{blue}{curr.deleter.\CAS (null, p)} \tcp*{announce yourself as deleter} \label{delete-CAS-deleter}
+				\textcolor{blue}{Backup[p].result := (curr.deleter = p)} \label{delete-write-after-CAS} \;
 				\textcolor{blue}{\KwRet (curr.deleter = p)}
 				}
-			}	
+			%}	
 		
 		
 		
@@ -188,7 +189,7 @@ For simplicity, a process creates a new operation structure each time it writes 
 	}
 	\uIf{Backup[p].optype = Delete}{
 		\uIf{Backup[p].nd $\neq$ null \&\& Backup[p].nd.next is marked}{
-			\textbf{go to} \ref{recoverable-logical-delete} with curr := nd\tcp*{try to complete the deletation}
+			\textbf{go to} \ref{delete-CAS-deleter} with curr := nd\tcp*{try to complete the deletation}
 		} \uElse {
 			\KwRet FAIL
 			%\textbf{go to} \ref{recover-delete} \tcp*{restart Delete}
@@ -198,23 +199,35 @@ For simplicity, a process creates a new operation structure each time it writes 
 \end{procedure}
 
 
-\newpage
+\clearpage
 \subsubsection*{Correctness Argument}
 In the following, we give an high-level proof for the correctness of the algorithm.
 
 First, notice that quitting the Lookup procedure at any point, or repeating it, can not violet the list consistency. The Lookup procedure simply traverse the list, while trying to physically delete marked nodes.
-Once curr.next is marked, a single process can perform the physical delete. This follows from the fact that at any point there is a single node in the list which points to curr. Once curr is physically delete, no node in the list points to curr, and thus any CAS operation with curr as the first parameter will fail. This observation relays on the fact that any new allocated node has a different address then curr.
-As a result, repeating the attempt to physically delete a node does not affect the list.
+Once curr.next is marked, a single process can perform the physical delete. This follows from the fact that at any point there is a single node in the list which points to curr. Once curr is physically delete, no node in the list points to curr, and thus any CAS operation with curr as the first parameter will fail. This observation relays on the fact that any new allocated node has a different address then curr. As a result, repeating the attempt to physically delete a node does not affect the list.
 
-A key argument in the proof is that if an insert operation is yet to perform a successful CAS (in line \ref{insert-CAS}), then considering the operation as not having a linearization point does not violate the list consistency. This follows from the fact the operation did not affected any process. In particular, repeating the operation in such case is also safe. As a result, if a process performing insert is about to return false, due to the fact key is already in the tree, and crash, then considering the operation as FAIL upon recovery does not violate consistency.
-A similar argument holds for delete operation and CAS for logic delete.
+Assume a process $p$ performs an $insert(key)$ operation. First, $p$ writes to Backup[p], updating it is about to perform an Insert. If a process $p$ does not crash, then, as in the original algorithm, it repeatedly tries to find the right location for the new node, and insert it by performing a CAS changing $pred.next$ to point to newnd. In addition, it is clear from the code that a crash after updating $Backup[p].result$ is after the operation had its linearization point, and the Recover procedure will return the right response. Therefore, we need to consider a crash before an update to $Backup[p].result$. There are two scenarios to consider.
 
-fails because key is already in the list, then aborting it (i.e., considering it as not having a linearization point) does not violate the consistency of list. This follows from the fact that such an operation does not affect any other process. Moreover, even repeating the operation in such case (assuming it did not return yet) can not violate consistency, from the same reason. A similar argument holds for delete operation which fails because key is not in the list.
+Assume $p$ crash without performing a successful CAS in line \ref{insert-CAS}. $p$ is the only process to have a reference to newnd, and it is yet to update any node with this reference, and thus no node points to newnd. As a result, the operation did not affects any other process, nor it will be in the future. Hence, considering the operation as not having a linearization point does not violate the list consistency. Indeed, since no node points to newnd, upon recovery $p$ will see that newnd is not in the list and also not marked, and thus will return FAIL. Notice this argument holds whether key is already in the tree, or not, as the operation in both cases did not affect the system.
 
-Assume a process $p$ performs $insert(key)$ operation. Then, $p$ creates a new node ndnew with 
+Assume now $p$ crash after performing a successful CAS in line \ref{insert-CAS}. In such case, newnd is part of the list, as pred.next points to it. Also notice we did not delete any other node, since pred.next pointed to curr, and after the CAS it points to newnd which points to curr. As a result, when $p$ executes the Recover procedure, either it will see newnd in the list, or that it is no longer part of the list, and it must be some other process deleted it, and hence newnd.next is marked. In any case, $p$ will return true as required.
+The above argument relies on the fact a marked node can not be unmarked, and that an Insert and Delete can not mistakenly remove nodes from the list. We have claimed it for Insert, and we will prove the same holds for Delete. Therefore, if a node is no longer in the list, it must be marked.
 
-For the Insert operation, $p$ tries to add the new node by performing a CAS. If it succeeds it will return true if it suffers no failure. In case of a failure after writing to Backup[p], upon recovery $p$ tries to complete its operation. If it already performed a successful CAS, that is, the node was added to the list, then either it is still in the list or that it was deleted. Therefore, if $p$ can find the new node in the list (using a procedure similar to find), or that it is marked, it must be that the node was added, and $p$ can return true. Otherwise, $p$ either crashed before performing the CAS, or that the CAS was unsuccessful. In both cases, the new node was not added, and $p$ can restart the Insert procedure.
+Assume a process $p$ performs a $delete(key)$ operation. First, $p$ writes to Backup[p], updating it is about to perform a Delete. As before, a crash after writing to Backup[p].result will return the right response. Also, a crush before updating any of Backup[p].result or Backup[p].nd implies $p$ is yet to try and mark any node, and thus the operation did not affect the system so far, nor it will be in the future. Therefore, we can consider the operation as not having a linearization point (even in case key is not the list), and indeed, the Recover procedure returns FAIL in such case.
 
-For the delete operation, once $p$ logically delete a node $v$, it also tries to announce itself as the "removal" of the node by writing its id to deleter using CAS. Assume a process $p$ crash while trying to delete the node. Upon recovery, if $p$ sees the node is not marked, then obliviously its deletion did not took affect, and it can restart the delete operation. However, if the node is marked, it might be that $p$ marked it before the crash, or it might be some other process trying to delete the same node did so. As $p$ can not distinguish between the two, and since we desire for a lock-free implementation, we let $p$ to try and complete the deletion, even if it is not to process to logically delete the node. To avoid a scenario in which more then a single process "delete" the same node, they all compete for deleter using CAS. The first one to perform it will win, and it is the only process to return true. It is easy to verify once a process writes to deleter, then eventually, if given enough time with no crash, it returns true, while any other process trying to delete the same node will have to retry the delete operation.
+Assume thus $p$ writes to Backup[p].nd. It follows that $p$ completed the lookup procedure and finds a node curr storing key. The lookup procedure guarantees there is a point in time (of the procedure execution) where curr is in the list and curr.next is not marked. If $p$ crash and recovers, and observe that curr is unmarked, then in returns FAIL. Since a marked node can not be unmarked, as there is no CAS changing a marked node, it follows that $p$ did not marked curr. Therefore, the operation did not affects any process, nor it will be, and we consider it as having no linearization point. Otherwise, the Recover function observe curr as marked, and we can conclude the marking point of curr is along the delete operation. We now prove we can linearize the operation, according to its response.
+
+Let $q$ be the process to mark curr. Since once curr.next is marked it will never be changed, the reference of curr.next is fixed to succ (of $q$ at the point of the marking). This also implies $q$ is unique and well defined, and any future CAS on curr.next will fail. As a result, any process leaving the while loop in line \ref{delete-while-loop} reads the same value in line \ref{delete-read-succ-after-CAS}, which is this succ. The attempt to physically delete curr in line \ref{delete-physical-delete} will succeed only if pred.next points to curr, and as we said, curr point to succ, and any other attempt will fail. Thus, if this attempt succeed, it deletes only curr, and can not delete additional nodes.
+
+In line \ref{delete-CAS-deleter} process $p$ tries to writes its id to curr.deleter. As it is initialised to null, only the first process to perform this CAS will succeed. Also, any $p$ must go through line \ref{delete-CAS-deleter} in order to complete its operation, as the Recover procedure redirect the process to this line. Therefore, if there is a process to complete its delete operation while observing curr.next is marked, there must be a CAS to curr.deleter. Let $q'$ be the first process to perform this CAS. As proved above, $q'$ tries to delete curr, and the point in time where curr is marked must be contained in its operation interval. Moreover, $q'$ is the only process to write to curr.deleter, and the first one to do so, thus $q'$ is the only process to obtain true when testing (curr.deleter = $q'$) in line \ref{delete-write-after-CAS} (and thus to also return true), while any other process will obtain false. We linearize the operation of $q'$ at the point of the marking, and any other attempt to delete curr is linearized after it (in an arbitrary order).
+
+A corollary of the analysis is that processes trying to delete the same node curr "helps" each other, in the sense that they all keep trying to mark curr. However, the marking process is not necessarily the one to return true. Also, in the original algorithm, if a process fails to mark a node, it starts the delete operation from the beginning. In our implementation, process can keep trying to mark the node without the need to perform a lookup again after each failed CAS. We guarantee that once curr is marked, exactly one process will return true, while the rest can consider curr as being deleted (in the course of their delete execution), and thus there is a point along their execution is which key is not in the tree, and they can return false.
+
+
+
+
+
+
+
 
  
